# tauri-app

./: package-lock.json  package.json
.github/workflow/: release.yaml
.github/workflows/: release.yaml
src/: App.tsx  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
