[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-notification = "2.0.0-beta.8"

[profile.release]
panic = "abort" #skip cleanup logic in prod when panic
lto = true # link-itme optimisation
strip = true # strip symbols from the binary

opt-level = "s" # optimize for binary size --- first to check
codegen-units = 1 # may increase time, but reduce binary size -- if build gets too
